<resources>
    <string name="app_name">Game Store</string>
    <string name="action_settings">Buscar</string>
    <string name="action_settings2">Ordenar</string>
    <string name="action_settings22">Configuración</string>
    <string name="action_settings222">Sobre AppCRUD</string>
    <string name="action_settings4">Volver al Listado</string>
    <string name="action_settings3">Añadir tu campo personalizado</string>
    <string name="title_activity_listado">Tu lista de juegos</string>
    <string name="title_activity_formulario">Añade tu juego a la lista</string>
    <string name="title_activity_buscar">Buscar</string>
    <string name="title_activity_sobre_app_crud">SobreAppCRUD</string>
    <string name="titlulo_pickers">Obtener fecha y hora</string>
    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>
    <string name="title_activity_pickers">PickersActivity</string>
    <string name="action_nuevo"></string>
    <string name="name">Nombre: </string>
    <string name="prize">Precio: </string>
    <string name="datos">Datos del Desarrollador: </string>
    <string name="contacto">Contacto: </string>
    <string name="prueba1">Prueba 1</string>
    <string name="prueba2">Prueba 2</string>
    <string name="prueba3">Prueba 3</string>
    <string name="añadeImg">Añade tu imagen:</string>
    <string name="todocorrecto">¿Todo correcto?</string>
    <string name="addtosp">Añadir al Spinner</string>
    <string name="fecha">Fecha:</string>
    <string name="title_activity_ayuda">Ayuda</string>

</resources>
