<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.gmail.samuelhermosilla98.gamestoreapp.Views.LogoActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings2"
        android:orderInCategory="100"
        android:title="@string/action_settings2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings22"
        android:orderInCategory="100"
        android:title="@string/action_settings22"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings222"
        android:orderInCategory="100"
        android:title="@string/action_settings222"
        app:showAsAction="never" />
</menu>
