<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gmail.samuelhermosilla98.gamestoreapp.Views.LogoActivity">

    <item
        android:id="@+id/action_nuevo"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="100"
        android:title="@string/action_nuevo"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_settings2"
        android:orderInCategory="105"
        android:title="@string/action_settings2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings4"
        android:orderInCategory="105"
        android:title="@string/action_settings4"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings3"
        android:orderInCategory="105"
        android:title="@string/action_settings3"
        app:showAsAction="never" />
</menu>
